# pinecone-adapter

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: coverage.yml  lint.yml  test.yml
pinecone-adopter/: __iniit__.py  version.py
pinecone_adapter/: version.py
pinecone_adapter/vector_store/: adapter.py
pinecone_adopter/: __init__.py  version.py
pinecone_adopter/vector_store/: __init__.py  adapter.py
tests/: __init__.py  test_adapter.py
